Fix: Header background on mobile (background-attachment)

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1063,6 +1063,7 @@ p {
     
     .hero {
         padding: 7rem 0 5rem;
+        background-attachment: scroll;
     }
     
     .hero-content {
